2008-06-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/RedBlackTree.cs: fixed possible null reference.

2008-06-11  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorOptions.cs: changed visibility.

2008-06-11  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/RedBlackTree.cs: Fixed red black tree.

2008-06-11  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/RedBlackTree.cs: fixed 'Bug 381106 - Document view
	  state can become scrambled'.

2008-06-11  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SemanticRule.cs: fixed 'Bug 393118 - URL
	  is not underlined completely and indeed redirects to only the
	  domain'

2008-06-10  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/LineSegmentTree.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/BookmarkMargin.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Rule.cs: Fixed some
	  warnings/refactored code a bit. Improved the handling of the
	  longest line.

2008-06-10  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed tab placement bug.

2008-06-09  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed horizontal scrollbar bug.

2008-06-09  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed bug in
	  VisualToDocumentLocation

2008-06-09  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed tab stop calculation - it
	  should work better now. Refactored visual <--> document location
	  logic.

2008-06-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed possible null reference
	  exception in VisualToDocumentLocation

2008-06-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Improved support for non